pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  labels:
    name: app
spec:
  containers:
  - name: echp
    image: registry.cluster.wik.cloud/public/echo
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
