service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod4-service
spec:
  selector:
    name: app3
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
