ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pod5-ingress
spec:
  rules:
  - host: naitmazi.k8s.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pod4-service
            port:
              number: 8080
